<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WpisAddEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme"
        android:background="@color/darkGray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtDefinicja"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/btnZapisz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="saveWpis"
            android:text="@string/txtZapisz"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
        <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:onClick="deleteWpis"
        android:text="@string/txtUsun"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/txtNazwa"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:hint="@string/editTxt_nazwa_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"

        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />
    <RadioGroup
        android:layout_marginTop="25dp"
        android:id="@+id/radioGroupTyp"
        android:layout_width="match_parent"
        android:layout_height="96dp">

        <RadioButton
            android:id="@+id/radioButtonWarzywo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdBtn_warzywo" />

        <RadioButton
            android:id="@+id/radioButtonOwoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdBtn_owoc" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/txtOpis"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/editTxt_opis_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minLines="1"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />




</LinearLayout>