<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2C2F33"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme">

        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="nameAZ"
            android:text="@string/btn_a_z"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            android:visibility="visible" />
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="nameZA"
            android:text="@string/btn_z_a"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            android:visibility="visible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_app_title"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="nowyWpis"
            android:text="@string/btn_sign"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </androidx.appcompat.widget.Toolbar>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F7F1"
        android:focusable="false"
        android:iconifiedByDefault="false"
        android:queryHint="Search" />

    <ListView
        android:id="@+id/roslinaListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:divider="#2C2F33"
        android:dividerHeight="3dp" />


</LinearLayout>