<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WpisDefinicjaActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme"
        android:background="@color/darkGray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtDefinicja"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/btnEdytuj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="Edytuj"
            android:text="@string/btnEdytuj_txt"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/txtNazwa"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/editTextType"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/txtOpis"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editTextDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minLines="1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />


</LinearLayout>